jewel-tabbar: when scrolling, fix hiding scrollbar on iOS and IE11

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -3479,11 +3479,11 @@ j|Snackbar {
 }
 
 .jewel.tabbar {
+  display: flex;
   overflow-y: hidden;
   overflow-x: scroll;
   -webkit-overflow-scrolling: touch;
-  display: flex;
-  -ms-overflow-style: none;
+  -ms-overflow-style: -ms-autohiding-scrollbar !important;
   scrollbar-width: none;
 }
 .jewel.tabbar::-webkit-scrollbar {
