--- a/frameworks/projects/Jewel/src/main/sass/components/_tabbar.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_tabbar.sass
@@ -24,18 +24,17 @@
 .jewel
     &.tabbar
         // width: 100%
+        display: flex
         overflow-y: hidden
         overflow-x: scroll
         -webkit-overflow-scrolling: touch //Momentum (innercial) Scrolling on iOS 
-        display: flex
-        -ms-overflow-style: none  // IE 10+
+        -ms-overflow-style: -ms-autohiding-scrollbar !important // IE 10+
         scrollbar-width: none  // Firefox
         &::-webkit-scrollbar 
             display: none !important // Safari and Chrome
             width: 0 !important
             height: 0 !important
             background-color: transparent
-
         &::-webkit-scrollbar-thumb
             display: none !important
 
